k8s/tsdd/zhongyihui/yuming/ainuo-bjmwxh_com_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zyh-h5
  namespace: zyh
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cf"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: zyh-h5-tls-2
    hosts:
    - web.mu0527.com
  rules:
  - host: web.mu0527.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zyh-h5
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zyh-admin
  namespace: zyh
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cf"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: zyh-admin-tls-2
    hosts:
    - admin.mu0527.com
  rules:
  - host: admin.mu0527.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zyh-admin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-zyh-ingress
  namespace: zyh
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cf"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: zyh-api-tls-2
    hosts:
    - api.mu0527.com
  rules:
  - host: api.mu0527.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zyh-tsdd-svc
            port:
              number: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zyh-wss-ingress
  namespace: zyh
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cf"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: zyh-wss-tls-2
    hosts:
    - wss.mu0527.com
  rules:
  - host: wss.mu0527.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zyh-wk-svc
            port:
              number: 5200
